update console logs visual.

--- a/Sentiment_Analyzer_PLN.ipynb
+++ b/Sentiment_Analyzer_PLN.ipynb
@@ -4,7 +4,9 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNrKwxV4cP5r07pi/5ubPbl"
+      "gpuType": "T4",
+      "mount_file_id": "1UX2YR0ltXiYBUb911BWrYNoNYmWkW6kC",
+      "authorship_tag": "ABX9TyM3htcjTOEs7r5SyjUo82ou"
     },
     "kernelspec": {
       "name": "python3",
@@ -12,41 +14,94 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
       "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import nltk\n",
+        "from nltk.corpus import stopwords\n",
+        "from nltk.tokenize import word_tokenize\n",
+        "from sklearn.model_selection import train_test_split, cross_val_score, GridSearchCV\n",
+        "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+        "from sklearn.naive_bayes import MultinomialNB\n",
+        "from sklearn.pipeline import Pipeline\n",
+        "from sklearn import metrics\n",
+        "import re"
+      ],
+      "metadata": {
+        "id": "968QM6IvSKeP"
+      },
       "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Baixando os recursos necessários do NLTK\n",
+        "print(\"🔄 Baixando os recursos necessários do NLTK...\")\n",
+        "nltk.download('punkt')\n",
+        "nltk.download('stopwords')\n",
+        "print(\"✅ Recursos baixados com sucesso!!\\n\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-YOW0c0wXk9H",
+        "outputId": "36c00676-6239-4e76-c25c-eedf98c166bf"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "🔄 Baixando os recursos necessários do NLTK...\n",
+            "✅ Recursos baixados com sucesso!!\n",
+            "\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
+            "[nltk_data]   Package punkt is already up-to-date!\n",
+            "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
+            "[nltk_data]   Package stopwords is already up-to-date!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ATiTHdRJ0D_z",
-        "outputId": "2774f588-58a4-4158-e0f8-7993f8737521"
+        "outputId": "572eec99-8d86-43b2-dc8e-f1f1c5436827"
       },
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
-            "[nltk_data]   Package stopwords is already up-to-date!\n",
-            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Package punkt is already up-to-date!\n"
-          ]
-        },
-        {
-          "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Iniciando o programa...\n",
-            "Dados carregados com sucesso.\n",
+            "🔍 Iniciando o programa...\n",
+            "✅ Dados carregados com sucesso.\n",
             "\n",
-            "Nomes das colunas de treinamento:\n",
+            "============================================================\n",
+            "📊 Nomes das colunas de treinamento:\n",
             "Index(['id', 'entity', 'sentiment', 'text'], dtype='object')\n",
             "\n",
-            "Amostra dos dados de treinamento:\n",
+            "============================================================\n",
+            "📄 Amostra dos dados de treinamento:\n",
             "     id       entity sentiment  \\\n",
             "0  2401  Borderlands  Positive   \n",
             "1  2401  Borderlands  Positive   \n",
@@ -61,25 +116,41 @@
             "3  im coming on borderlands and i will murder you...  \n",
             "4  im getting on borderlands 2 and i will murder ...  \n",
             "\n",
-            "Distribuição das classes de sentimento de treinamento:\n",
+            "============================================================\n",
+            "📈 Distribuição das classes de sentimento de treinamento:\n",
             "sentiment\n",
             "Negative      22542\n",
             "Positive      20832\n",
             "Neutral       18318\n",
             "Irrelevant    12990\n",
             "Name: count, dtype: int64\n",
-            "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+            "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/joblib/externals/loky/backend/fork_exec.py:38: RuntimeWarning: os.fork() was called. os.fork() is incompatible with multithreaded code, and JAX is multithreaded, so this will likely lead to a deadlock.\n",
+            "  pid = os.fork()\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
             "\n",
-            "Melhores Parâmetros: {'clf__alpha': 0.3, 'tfidf__max_features': 15000, 'tfidf__ngram_range': (1, 3)}\n",
+            "============================================================\n",
+            "🔧 Melhores Parâmetros: {'clf__alpha': 0.3, 'tfidf__max_features': 15000, 'tfidf__ngram_range': (1, 3)}\n",
             "\n",
-            "Pontuações da Verificação Cruzada:\n",
-            "[0.45414379 0.48855268 0.4108195  0.38430637 0.38390466 0.2959293\n",
-            " 0.25468666 0.36355115 0.41416711 0.44710766]\n",
+            "============================================================\n",
+            "🔍 Pontuações da Verificação Cruzada:\n",
+            "[0.4866439  0.43362121 0.37165238 0.38397161 0.47228174]\n",
+            "🔢 Pontuação média da Verificação Cruzada: 0.4296\n",
+            "✅ Dados carregados com sucesso.\n",
             "\n",
-            "Pontuação média da Verificação Cruzada: 0.3897\n",
-            "Dados carregados com sucesso.\n",
-            "\n",
-            "Relatório de Classificação no conjunto de validação:\n",
+            "============================================================\n",
+            "📈 Relatório de Classificação no conjunto de validação:\n",
             "              precision    recall  f1-score   support\n",
             "\n",
             "  Irrelevant       0.89      0.74      0.81       172\n",
@@ -92,11 +163,15 @@
             "weighted avg       0.84      0.83      0.83      1000\n",
             "\n",
             "\n",
-            "Matriz de Confusão no conjunto de validação:\n",
+            "============================================================\n",
+            "📊 Matriz de Confusão no conjunto de validação:\n",
             "[[127  23   6  16]\n",
             " [  1 237  11  17]\n",
             " [  9  36 221  19]\n",
             " [  6  19   8 244]]\n",
+            "\n",
+            "============================================================\n",
+            "📝 Testes com frases de exemplo:\n",
             "Frase: \"I love this product!\"\n",
             "Sentimento Predito: Positive\n",
             "\n",
@@ -242,12 +317,14 @@
             "Sentimento Predito: Positive\n",
             "\n",
             "\n",
-            "Análise Crítica do Modelo:\n",
+            "============================================================\n",
+            "🔍 Análise Crítica do Modelo:\n",
             "Pontos fortes: O modelo ajustado pode apresentar melhorias em desempenho.\n",
             "Pontos fracos: A detecção de sentimentos sutis ainda pode ser um desafio.\n",
             "Oportunidades de melhorias: Continuar ajustando hiperparâmetros e explorar modelos mais avançados.\n",
             "\n",
-            "Informações adicionais:\n",
+            "============================================================\n",
+            "ℹ️ Informações adicionais:\n",
             "Os dados foram divididos em 80% para treino e 20% para teste.\n",
             "O pré-processamento incluiu a remoção de stopwords e conversão para minúsculas.\n",
             "O modelo foi ajustado com Grid Search para melhorar o desempenho.\n",
@@ -256,22 +333,6 @@
         }
       ],
       "source": [
-        "import pandas as pd\n",
-        "import numpy as np\n",
-        "import nltk\n",
-        "from nltk.corpus import stopwords\n",
-        "from nltk.tokenize import word_tokenize\n",
-        "from sklearn.model_selection import train_test_split, cross_val_score, GridSearchCV\n",
-        "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-        "from sklearn.naive_bayes import MultinomialNB\n",
-        "from sklearn.pipeline import Pipeline\n",
-        "from sklearn import metrics\n",
-        "import re\n",
-        "\n",
-        "# Baixando os recursos necessários do NLTK\n",
-        "nltk.download('stopwords')\n",
-        "nltk.download('punkt')\n",
-        "\n",
         "def preprocess_text(text):\n",
         "    if isinstance(text, str):\n",
         "        # Tokenização e remoção de stopwords\n",
@@ -285,30 +346,37 @@
         "    try:\n",
         "        column_names = ['id', 'entity', 'sentiment', 'text']\n",
         "        df = pd.read_csv(filepath, header=None, names=column_names)\n",
-        "        print(\"Dados carregados com sucesso.\")\n",
+        "        print(\"✅ Dados carregados com sucesso.\")\n",
         "        return df\n",
         "    except Exception as e:\n",
-        "        print(f\"Erro ao carregar o dataset: {e}\")\n",
+        "        print(f\"❌ Erro ao carregar o dataset: {e}\")\n",
         "        return None\n",
         "\n",
+        "def print_divider():\n",
+        "    print(\"\\n\" + \"=\"*60)\n",
+        "\n",
         "def main():\n",
-        "    print(\"Iniciando o programa...\")\n",
+        "    print(\"🔍 Iniciando o programa...\")\n",
         "\n",
         "    # Carregando os dados de treinamento\n",
-        "    df_train = load_data(\"/content/twitter_training.csv\")\n",
+        "    df_train = load_data(\"/content/drive/MyDrive/Trabalho IA /twitter_training.csv\")\n",
         "\n",
         "    if df_train is not None:\n",
+        "        print_divider()\n",
+        "\n",
         "        # Explorando os dados de treinamento\n",
-        "        print(\"\\nNomes das colunas de treinamento:\")\n",
+        "        print(\"📊 Nomes das colunas de treinamento:\")\n",
         "        print(df_train.columns)\n",
-        "        print(\"\\nAmostra dos dados de treinamento:\")\n",
+        "        print_divider()\n",
+        "        print(\"📄 Amostra dos dados de treinamento:\")\n",
         "        print(df_train.head())\n",
         "\n",
         "        if 'sentiment' in df_train.columns:\n",
-        "            print(\"\\nDistribuição das classes de sentimento de treinamento:\")\n",
+        "            print_divider()\n",
+        "            print(\"📈 Distribuição das classes de sentimento de treinamento:\")\n",
         "            print(df_train['sentiment'].value_counts())\n",
         "        else:\n",
-        "            print(\"\\nErro: A coluna 'sentiment' não foi encontrada no DataFrame de treinamento.\")\n",
+        "            print(\"❌ Erro: A coluna 'sentiment' não foi encontrada no DataFrame de treinamento.\")\n",
         "            return\n",
         "\n",
         "        # Pré-processamento dos dados de treinamento\n",
@@ -338,16 +406,18 @@
         "\n",
         "        # Melhor modelo e parâmetros\n",
         "        best_model = grid_search.best_estimator_\n",
-        "        print(f\"\\nMelhores Parâmetros: {grid_search.best_params_}\")\n",
+        "        print_divider()\n",
+        "        print(f\"🔧 Melhores Parâmetros: {grid_search.best_params_}\")\n",
         "\n",
         "        # Verificação cruzada com o melhor modelo\n",
         "        cv_scores = cross_val_score(best_model, X_train, y_train, cv=5)  # 5-fold cross-validation\n",
-        "        print(\"\\nPontuações da Verificação Cruzada:\")\n",
+        "        print_divider()\n",
+        "        print(\"🔍 Pontuações da Verificação Cruzada:\")\n",
         "        print(cv_scores)\n",
-        "        print(f\"\\nPontuação média da Verificação Cruzada: {np.mean(cv_scores):.4f}\")\n",
+        "        print(f\"🔢 Pontuação média da Verificação Cruzada: {np.mean(cv_scores):.4f}\")\n",
         "\n",
         "        # Carregando os dados de validação\n",
-        "        df_val = load_data(\"/content/twitter_validation.csv\")\n",
+        "        df_val = load_data(\"/content/drive/MyDrive/Trabalho IA /twitter_validation.csv\")\n",
         "\n",
         "        if df_val is not None:\n",
         "            # Pré-processamento dos dados de validação\n",
@@ -360,12 +430,14 @@
         "\n",
         "            # Avaliação do modelo com o conjunto de validação\n",
         "            y_pred_val = best_model.predict(X_val)\n",
-        "            print(\"\\nRelatório de Classificação no conjunto de validação:\")\n",
+        "            print_divider()\n",
+        "            print(\"📈 Relatório de Classificação no conjunto de validação:\")\n",
         "            print(metrics.classification_report(y_val, y_pred_val))\n",
         "\n",
         "            # Matriz de confusão no conjunto de validação\n",
         "            conf_matrix_val = metrics.confusion_matrix(y_val, y_pred_val)\n",
-        "            print(\"\\nMatriz de Confusão no conjunto de validação:\")\n",
+        "            print_divider()\n",
+        "            print(\"📊 Matriz de Confusão no conjunto de validação:\")\n",
         "            print(conf_matrix_val)\n",
         "\n",
         "        # Realizando testes com frases de exemplo\n",
@@ -421,26 +493,30 @@
         "        ]\n",
         "\n",
         "        predicoes = best_model.predict(exemplo_frases)\n",
+        "        print_divider()\n",
+        "        print(\"📝 Testes com frases de exemplo:\")\n",
         "        for frase, sentimento in zip(exemplo_frases, predicoes):\n",
         "            print(f'Frase: \"{frase}\"\\nSentimento Predito: {sentimento}\\n')\n",
         "\n",
         "        # Análise crítica do modelo\n",
-        "        print(\"\\nAnálise Crítica do Modelo:\")\n",
+        "        print_divider()\n",
+        "        print(\"🔍 Análise Crítica do Modelo:\")\n",
         "        print(\"Pontos fortes: O modelo ajustado pode apresentar melhorias em desempenho.\")\n",
         "        print(\"Pontos fracos: A detecção de sentimentos sutis ainda pode ser um desafio.\")\n",
         "        print(\"Oportunidades de melhorias: Continuar ajustando hiperparâmetros e explorar modelos mais avançados.\")\n",
         "\n",
         "        # Informações adicionais\n",
-        "        print(\"\\nInformações adicionais:\")\n",
+        "        print_divider()\n",
+        "        print(\"ℹ️ Informações adicionais:\")\n",
         "        print(\"Os dados foram divididos em 80% para treino e 20% para teste.\")\n",
         "        print(\"O pré-processamento incluiu a remoção de stopwords e conversão para minúsculas.\")\n",
         "        print(\"O modelo foi ajustado com Grid Search para melhorar o desempenho.\")\n",
         "        print(\"O modelo suporta análises em inglês.\")\n",
         "    else:\n",
-        "        print(\"Não foi possível carregar os dados. Verifique o caminho do arquivo e tente novamente.\")\n",
+        "        print(\"❌ Não foi possível carregar os dados. Verifique o caminho do arquivo e tente novamente.\")\n",
         "\n",
         "if __name__ == \"__main__\":\n",
-        "    main()\n"
+        "    main()"
       ]
     }
   ]
