Fix threads problem.

--- a/Sentiment_Analyzer_PLN.ipynb
+++ b/Sentiment_Analyzer_PLN.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "mount_file_id": "1UX2YR0ltXiYBUb911BWrYNoNYmWkW6kC",
-      "authorship_tag": "ABX9TyM3htcjTOEs7r5SyjUo82ou"
+      "authorship_tag": "ABX9TyOzvDq2bn4bTTzp7NFKXtUw"
     },
     "kernelspec": {
       "name": "python3",
@@ -31,12 +31,13 @@
         "from sklearn.naive_bayes import MultinomialNB\n",
         "from sklearn.pipeline import Pipeline\n",
         "from sklearn import metrics\n",
-        "import re"
+        "import re\n",
+        "from joblib import parallel_backend"
       ],
       "metadata": {
         "id": "968QM6IvSKeP"
       },
-      "execution_count": 17,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -80,13 +81,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ATiTHdRJ0D_z",
-        "outputId": "572eec99-8d86-43b2-dc8e-f1f1c5436827"
+        "outputId": "71032534-5b8a-4803-b123-c9a578c8ddab"
       },
       "outputs": [
         {
@@ -124,21 +125,7 @@
             "Neutral       18318\n",
             "Irrelevant    12990\n",
             "Name: count, dtype: int64\n",
-            "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.10/dist-packages/joblib/externals/loky/backend/fork_exec.py:38: RuntimeWarning: os.fork() was called. os.fork() is incompatible with multithreaded code, and JAX is multithreaded, so this will likely lead to a deadlock.\n",
-            "  pid = os.fork()\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
+            "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
             "\n",
             "============================================================\n",
             "🔧 Melhores Parâmetros: {'clf__alpha': 0.3, 'tfidf__max_features': 15000, 'tfidf__ngram_range': (1, 3)}\n",
@@ -402,7 +389,10 @@
         "\n",
         "        # Grid Search para ajuste de hiperparâmetros\n",
         "        grid_search = GridSearchCV(model, parameters, cv=5, n_jobs=-1, verbose=1)\n",
-        "        grid_search.fit(X_train, y_train)\n",
+        "\n",
+        "        # Usando parallel_backend para definir o uso de threads\n",
+        "        with parallel_backend('threading'):\n",
+        "            grid_search.fit(X_train, y_train)\n",
         "\n",
         "        # Melhor modelo e parâmetros\n",
         "        best_model = grid_search.best_estimator_\n",
