--- a/Sentiment_Analyzer_PLN.ipynb
+++ b/Sentiment_Analyzer_PLN.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "mount_file_id": "1UX2YR0ltXiYBUb911BWrYNoNYmWkW6kC",
-      "authorship_tag": "ABX9TyOzvDq2bn4bTTzp7NFKXtUw"
+      "authorship_tag": "ABX9TyN/+40RB1IGDb/nwa4AZxN8"
     },
     "kernelspec": {
       "name": "python3",
@@ -25,20 +25,49 @@
         "import numpy as np\n",
         "import nltk\n",
         "from nltk.corpus import stopwords\n",
+        "from nltk.corpus import wordnet\n",
         "from nltk.tokenize import word_tokenize\n",
+        "from nltk.tokenize import TweetTokenizer\n",
+        "from nltk.stem import WordNetLemmatizer\n",
         "from sklearn.model_selection import train_test_split, cross_val_score, GridSearchCV\n",
         "from sklearn.feature_extraction.text import TfidfVectorizer\n",
         "from sklearn.naive_bayes import MultinomialNB\n",
         "from sklearn.pipeline import Pipeline\n",
         "from sklearn import metrics\n",
         "import re\n",
-        "from joblib import parallel_backend"
+        "from joblib import parallel_backend\n",
+        "import random\n",
+        "\n",
+        "\n",
+        "!pip install textblob\n",
+        "!pip install pyspellchecker\n",
+        "from spellchecker import SpellChecker\n",
+        "# Implementar correções ortográficas\n",
+        "from textblob import TextBlob\n"
       ],
       "metadata": {
-        "id": "968QM6IvSKeP"
+        "id": "968QM6IvSKeP",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7c744894-b436-4b5e-a04e-853eab99573a"
       },
-      "execution_count": 22,
-      "outputs": []
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: textblob in /usr/local/lib/python3.10/dist-packages (0.17.1)\n",
+            "Requirement already satisfied: nltk>=3.1 in /usr/local/lib/python3.10/dist-packages (from textblob) (3.8.1)\n",
+            "Requirement already satisfied: click in /usr/local/lib/python3.10/dist-packages (from nltk>=3.1->textblob) (8.1.7)\n",
+            "Requirement already satisfied: joblib in /usr/local/lib/python3.10/dist-packages (from nltk>=3.1->textblob) (1.4.2)\n",
+            "Requirement already satisfied: regex>=2021.8.3 in /usr/local/lib/python3.10/dist-packages (from nltk>=3.1->textblob) (2024.5.15)\n",
+            "Requirement already satisfied: tqdm in /usr/local/lib/python3.10/dist-packages (from nltk>=3.1->textblob) (4.66.5)\n",
+            "Requirement already satisfied: pyspellchecker in /usr/local/lib/python3.10/dist-packages (0.8.1)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -47,6 +76,7 @@
         "print(\"🔄 Baixando os recursos necessários do NLTK...\")\n",
         "nltk.download('punkt')\n",
         "nltk.download('stopwords')\n",
+        "nltk.download('wordnet')\n",
         "print(\"✅ Recursos baixados com sucesso!!\\n\")"
       ],
       "metadata": {
@@ -54,9 +84,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-YOW0c0wXk9H",
-        "outputId": "36c00676-6239-4e76-c25c-eedf98c166bf"
+        "outputId": "bdbd5ff8-313a-41ce-f2e8-edcb4dae7f0d"
       },
-      "execution_count": 18,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
@@ -74,20 +104,22 @@
             "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
             "[nltk_data]   Package punkt is already up-to-date!\n",
             "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
-            "[nltk_data]   Package stopwords is already up-to-date!\n"
+            "[nltk_data]   Package stopwords is already up-to-date!\n",
+            "[nltk_data] Downloading package wordnet to /root/nltk_data...\n",
+            "[nltk_data]   Package wordnet is already up-to-date!\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 67,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ATiTHdRJ0D_z",
-        "outputId": "71032534-5b8a-4803-b123-c9a578c8ddab"
+        "outputId": "3d4cd941-7466-446c-b604-a47340fd8b59"
       },
       "outputs": [
         {
@@ -125,37 +157,38 @@
             "Neutral       18318\n",
             "Irrelevant    12990\n",
             "Name: count, dtype: int64\n",
-            "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+            "Fitting 10 folds for each of 1 candidates, totalling 10 fits\n",
             "\n",
             "============================================================\n",
-            "🔧 Melhores Parâmetros: {'clf__alpha': 0.3, 'tfidf__max_features': 15000, 'tfidf__ngram_range': (1, 3)}\n",
+            "🔧 Melhores Parâmetros: {'clf__alpha': 0.3, 'tfidf__max_features': 20000, 'tfidf__ngram_range': (1, 2)}\n",
             "\n",
             "============================================================\n",
             "🔍 Pontuações da Verificação Cruzada:\n",
-            "[0.4866439  0.43362121 0.37165238 0.38397161 0.47228174]\n",
-            "🔢 Pontuação média da Verificação Cruzada: 0.4296\n",
+            "[0.76742901 0.76715263 0.76735991 0.76763629 0.7662544  0.76817302\n",
+            " 0.7699696  0.76250691 0.7699005  0.76485627]\n",
+            "🔢 Pontuação média da Verificação Cruzada: 0.7671\n",
             "✅ Dados carregados com sucesso.\n",
             "\n",
             "============================================================\n",
             "📈 Relatório de Classificação no conjunto de validação:\n",
             "              precision    recall  f1-score   support\n",
             "\n",
-            "  Irrelevant       0.89      0.74      0.81       172\n",
-            "    Negative       0.75      0.89      0.82       266\n",
-            "     Neutral       0.90      0.78      0.83       285\n",
-            "    Positive       0.82      0.88      0.85       277\n",
+            "  Irrelevant       0.89      0.79      0.84       172\n",
+            "    Negative       0.80      0.91      0.85       266\n",
+            "     Neutral       0.89      0.78      0.83       285\n",
+            "    Positive       0.86      0.92      0.89       277\n",
             "\n",
-            "    accuracy                           0.83      1000\n",
-            "   macro avg       0.84      0.82      0.83      1000\n",
-            "weighted avg       0.84      0.83      0.83      1000\n",
+            "    accuracy                           0.85      1000\n",
+            "   macro avg       0.86      0.85      0.85      1000\n",
+            "weighted avg       0.86      0.85      0.85      1000\n",
             "\n",
             "\n",
             "============================================================\n",
             "📊 Matriz de Confusão no conjunto de validação:\n",
-            "[[127  23   6  16]\n",
-            " [  1 237  11  17]\n",
-            " [  9  36 221  19]\n",
-            " [  6  19   8 244]]\n",
+            "[[136  15   8  13]\n",
+            " [  1 241  12  12]\n",
+            " [ 11  36 221  17]\n",
+            " [  5  10   8 254]]\n",
             "\n",
             "============================================================\n",
             "📝 Testes com frases de exemplo:\n",
@@ -217,7 +250,7 @@
             "Sentimento Predito: Positive\n",
             "\n",
             "Frase: \"The software update was a huge improvement.\"\n",
-            "Sentimento Predito: Negative\n",
+            "Sentimento Predito: Positive\n",
             "\n",
             "Frase: \"I'm not satisfied with the customer support.\"\n",
             "Sentimento Predito: Negative\n",
@@ -321,14 +354,57 @@
       ],
       "source": [
         "def preprocess_text(text):\n",
+        "    if pd.isna(text):\n",
+        "        return ''\n",
         "    if isinstance(text, str):\n",
-        "        # Tokenização e remoção de stopwords\n",
+        "        # Converter para minúsculas\n",
+        "        text = text.lower()\n",
+        "\n",
+        "        # Remover URLs\n",
+        "        text = re.sub(r'http\\S+|www\\S+|https\\S+', '', text, flags=re.MULTILINE)\n",
+        "\n",
+        "        # Remover números e pontuações, exceto '!' e '?'\n",
+        "        text = re.sub(r'[^\\w\\s!?]', '', text)\n",
+        "\n",
+        "        # Remover espaços em branco extras\n",
+        "        text = re.sub(r'\\s+', ' ', text).strip()\n",
+        "\n",
+        "        # Tokenização\n",
         "        tokens = word_tokenize(text.lower())\n",
-        "        stop_words = set(stopwords.words('english'))\n",
+        "        stop_words = set(stopwords.words('english')) - {  'not', 'no', 'nor', 'but', 'however', 'okay' , 'although', 'though',\n",
+        "                                                          'happy', 'sad', 'angry', 'frustrated', 'excited', 'disappointed',\n",
+        "                                                          'anxious', 'calm', 'hopeful', 'fearful', 'joyful', 'worried',\n",
+        "                                                          'content', 'lonely', 'confused', 'relieved', 'depressed',\n",
+        "                                                          'satisfied', 'jealous', 'grateful', 'guilty', 'ashamed',\n",
+        "                                                          'proud', 'embarrassed', 'nervous', 'surprised', 'curious',\n",
+        "                                                          'bored', 'tired', 'energetic', 'peaceful', 'resentful',\n",
+        "                                                          'inspired', 'motivated', 'determined', 'overwhelmed',\n",
+        "                                                          'irritated', 'hurt', 'loving', 'caring', 'appreciated',\n",
+        "                                                          'ignored', 'unimportant', 'valued', 'respected', 'admired',\n",
+        "                                                          'misunderstood', 'rejected', 'accepted', 'supported'\n",
+        "                                                       }\n",
         "        filtered_tokens = [word for word in tokens if word.isalpha() and word not in stop_words]\n",
         "        return ' '.join(filtered_tokens)\n",
         "    return ''\n",
         "\n",
+        "def get_synonyms(word):\n",
+        "    return list({lemma.name() for syn in wordnet.synsets(word) for lemma in syn.lemmas()})\n",
+        "\n",
+        "def data_augmentation(text, sentiment, num_augmented=1, substitution_prob=0.3):\n",
+        "    words = text.split()\n",
+        "    augmented_texts = []\n",
+        "\n",
+        "    for _ in range(num_augmented):\n",
+        "        new_text = []\n",
+        "        for word in words:\n",
+        "            synonyms = get_synonyms(word)\n",
+        "            if synonyms and random.random() < substitution_prob:\n",
+        "                new_text.append(random.choice(synonyms))\n",
+        "            else:\n",
+        "                new_text.append(word)\n",
+        "        augmented_texts.append((' '.join(new_text), sentiment))\n",
+        "\n",
+        "    return augmented_texts\n",
         "def load_data(filepath):\n",
         "    try:\n",
         "        column_names = ['id', 'entity', 'sentiment', 'text']\n",
@@ -366,9 +442,26 @@
         "            print(\"❌ Erro: A coluna 'sentiment' não foi encontrada no DataFrame de treinamento.\")\n",
         "            return\n",
         "\n",
+        "        # Remover linhas com valores NaN\n",
+        "        df_train = df_train.dropna(subset=['text', 'sentiment'])\n",
+        "\n",
+        "        # Aplicar data augmentation\n",
+        "        augmented_data = []\n",
+        "        for _, row in df_train.iterrows():\n",
+        "            augmented_data.extend(data_augmentation(row['text'], row['sentiment'], num_augmented=1, substitution_prob=0.3))\n",
+        "\n",
+        "        # Adicionar dados aumentados ao DataFrame original\n",
+        "        df_augmented = pd.DataFrame(augmented_data, columns=['text', 'sentiment'])\n",
+        "        df_train = pd.concat([df_train, df_augmented], ignore_index=True)\n",
+        "\n",
+        "        # Embaralhar o DataFrame\n",
+        "        df_train = df_train.sample(frac=1).reset_index(drop=True)\n",
+        "\n",
         "        # Pré-processamento dos dados de treinamento\n",
-        "        df_train['text'] = df_train['text'].fillna('').astype(str)\n",
         "        df_train['clean_text'] = df_train['text'].apply(preprocess_text)\n",
+        "\n",
+        "        # Remover linhas vazias após o pré-processamento\n",
+        "        df_train = df_train[df_train['clean_text'] != '']\n",
         "\n",
         "        # Separação dos dados em treino e teste\n",
         "        X_train = df_train['clean_text']\n",
@@ -382,13 +475,13 @@
         "\n",
         "        # Definindo o grid de parâmetros para ajuste\n",
         "        parameters = {\n",
-        "            'tfidf__ngram_range': [(1,3)],\n",
-        "            'tfidf__max_features': [15000],\n",
+        "            'tfidf__ngram_range': [(1,2)],\n",
+        "            'tfidf__max_features': [20000],\n",
         "            'clf__alpha': [0.3]\n",
         "        }\n",
         "\n",
         "        # Grid Search para ajuste de hiperparâmetros\n",
-        "        grid_search = GridSearchCV(model, parameters, cv=5, n_jobs=-1, verbose=1)\n",
+        "        grid_search = GridSearchCV(model, parameters, cv=10, n_jobs=-1, verbose=1)\n",
         "\n",
         "        # Usando parallel_backend para definir o uso de threads\n",
         "        with parallel_backend('threading'):\n",
@@ -400,7 +493,7 @@
         "        print(f\"🔧 Melhores Parâmetros: {grid_search.best_params_}\")\n",
         "\n",
         "        # Verificação cruzada com o melhor modelo\n",
-        "        cv_scores = cross_val_score(best_model, X_train, y_train, cv=5)  # 5-fold cross-validation\n",
+        "        cv_scores = cross_val_score(best_model, X_train, y_train, cv=10)  # 5-fold cross-validation\n",
         "        print_divider()\n",
         "        print(\"🔍 Pontuações da Verificação Cruzada:\")\n",
         "        print(cv_scores)\n",
