update result score(0.7794).

--- a/Sentiment_Analyzer_PLN.ipynb
+++ b/Sentiment_Analyzer_PLN.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "mount_file_id": "1UX2YR0ltXiYBUb911BWrYNoNYmWkW6kC",
-      "authorship_tag": "ABX9TyN/+40RB1IGDb/nwa4AZxN8"
+      "authorship_tag": "ABX9TyNz2L6qeYaa/W6grkxLUQOG"
     },
     "kernelspec": {
       "name": "python3",
@@ -113,13 +113,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": 75,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ATiTHdRJ0D_z",
-        "outputId": "3d4cd941-7466-446c-b604-a47340fd8b59"
+        "outputId": "b5d52409-6780-4c5a-8d8e-571a0d6ccda2"
       },
       "outputs": [
         {
@@ -164,9 +164,9 @@
             "\n",
             "============================================================\n",
             "🔍 Pontuações da Verificação Cruzada:\n",
-            "[0.76742901 0.76715263 0.76735991 0.76763629 0.7662544  0.76817302\n",
-            " 0.7699696  0.76250691 0.7699005  0.76485627]\n",
-            "🔢 Pontuação média da Verificação Cruzada: 0.7671\n",
+            "[0.78193233 0.78145852 0.7776681  0.77826035 0.77794449 0.77839855\n",
+            " 0.78108343 0.78021045 0.77928257 0.77817701]\n",
+            "🔢 Pontuação média da Verificação Cruzada: 0.7794\n",
             "✅ Dados carregados com sucesso.\n",
             "\n",
             "============================================================\n",
@@ -174,9 +174,9 @@
             "              precision    recall  f1-score   support\n",
             "\n",
             "  Irrelevant       0.89      0.79      0.84       172\n",
-            "    Negative       0.80      0.91      0.85       266\n",
-            "     Neutral       0.89      0.78      0.83       285\n",
-            "    Positive       0.86      0.92      0.89       277\n",
+            "    Negative       0.78      0.92      0.85       266\n",
+            "     Neutral       0.92      0.76      0.83       285\n",
+            "    Positive       0.85      0.91      0.88       277\n",
             "\n",
             "    accuracy                           0.85      1000\n",
             "   macro avg       0.86      0.85      0.85      1000\n",
@@ -185,10 +185,10 @@
             "\n",
             "============================================================\n",
             "📊 Matriz de Confusão no conjunto de validação:\n",
-            "[[136  15   8  13]\n",
-            " [  1 241  12  12]\n",
-            " [ 11  36 221  17]\n",
-            " [  5  10   8 254]]\n",
+            "[[136  16   6  14]\n",
+            " [  0 246   8  12]\n",
+            " [ 11  38 218  18]\n",
+            " [  5  15   6 251]]\n",
             "\n",
             "============================================================\n",
             "📝 Testes com frases de exemplo:\n",
@@ -301,7 +301,7 @@
             "Sentimento Predito: Negative\n",
             "\n",
             "Frase: \"I feel indifferent about the new changes.\"\n",
-            "Sentimento Predito: Positive\n",
+            "Sentimento Predito: Neutral\n",
             "\n",
             "Frase: \"The performance was outstanding.\"\n",
             "Sentimento Predito: Positive\n",
@@ -390,8 +390,8 @@
         "def get_synonyms(word):\n",
         "    return list({lemma.name() for syn in wordnet.synsets(word) for lemma in syn.lemmas()})\n",
         "\n",
-        "def data_augmentation(text, sentiment, num_augmented=1, substitution_prob=0.3):\n",
-        "    words = text.split()\n",
+        "def data_augmentation(text, sentiment, num_augmented=3, substitution_prob=0.3):\n",
+        "    words = word_tokenize(text)\n",
         "    augmented_texts = []\n",
         "\n",
         "    for _ in range(num_augmented):\n",
@@ -403,6 +403,12 @@
         "            else:\n",
         "                new_text.append(word)\n",
         "        augmented_texts.append((' '.join(new_text), sentiment))\n",
+        "\n",
+        "    # Troca de ordem das palavras\n",
+        "    for _ in range(num_augmented):\n",
+        "        new_words = words.copy()\n",
+        "        random.shuffle(new_words)\n",
+        "        augmented_texts.append((' '.join(new_words), sentiment))\n",
         "\n",
         "    return augmented_texts\n",
         "def load_data(filepath):\n",
@@ -448,7 +454,7 @@
         "        # Aplicar data augmentation\n",
         "        augmented_data = []\n",
         "        for _, row in df_train.iterrows():\n",
-        "            augmented_data.extend(data_augmentation(row['text'], row['sentiment'], num_augmented=1, substitution_prob=0.3))\n",
+        "            augmented_data.extend(data_augmentation(row['text'], row['sentiment'], num_augmented=3, substitution_prob=0.3))\n",
         "\n",
         "        # Adicionar dados aumentados ao DataFrame original\n",
         "        df_augmented = pd.DataFrame(augmented_data, columns=['text', 'sentiment'])\n",
@@ -477,7 +483,7 @@
         "        parameters = {\n",
         "            'tfidf__ngram_range': [(1,2)],\n",
         "            'tfidf__max_features': [20000],\n",
-        "            'clf__alpha': [0.3]\n",
+        "            'clf__alpha': [0.3],\n",
         "        }\n",
         "\n",
         "        # Grid Search para ajuste de hiperparâmetros\n",
